tests/baselines/reference/computedPropertyNames7.errors.txt
tests/cases/conformance/es6/computedProperties/computedPropertyNames7.ts(5,5): error TS2463: A computed property name must be of type 'string', 'number', or 'any'.


==== tests/cases/conformance/es6/computedProperties/computedPropertyNames7.ts (1 errors) ====
    enum E {
        member
    }
    var v = {
        [E.member]: 0
        ~~~~~~~~~~
!!! error TS2463: A computed property name must be of type 'string', 'number', or 'any'.
    }